--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Expanding Cards</title>
 </head>
 <body>
 
     <div class="container">
-        <div class="panel active" style="background-image:url('https://images.unsplash.com/photo-1616243432294-04baf87f5ac3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1275&q=80') ;">
+        <div class="panel active" style="background-image:url('https://images.unsplash.com/photo-1556329415-8aac3b1c1ea7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80') ;">
+            <h3>Explore The World</h3>
+        </div>
+        <div class="panel" style="background-image:url('https://images.unsplash.com/photo-1508233620467-f79f1e317a05?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1568&q=80') ;">
+            <h3>Explore The World</h3>
+        </div>
+        <div class="panel " style="background-image:url('https://images.unsplash.com/photo-1494253109108-2e30c049369b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2250&q=80') ;">
+            <h3>Explore The World</h3>
+        </div>
+        <div class="panel " style="background-image:url('https://images.unsplash.com/photo-1609347744425-175ecbd3cc0e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80') ;">
+            <h3>Explore The World</h3>
+        </div>
+        <div class="panel " style="background-image:url('https://images.unsplash.com/photo-1507089947368-19c1da9775ae?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1510&q=80') ;">
             <h3>Explore The World</h3>
         </div>
     </div>
-    
+
+    <!-- script -->
+    <script src="./script.js"></script>
 </body>
 </html>
